# kodiak

kodiak/: CMakeLists.txt  README.md
kodiak/src/: Executable.cpp  PCH.hpp
kodiak/src/Core/: ConfigManager.hpp  Diagnostics.hpp  Versioning.hpp
kodiak/src/Game/: Game.hpp  Runtime.hpp
kodiak/src/Game/Features/: Feature.hpp  FeatureRegistry.hpp
kodiak/src/Game/Features/Impl/: AimAssist.hpp
kodiak/src/Game/Hook/: Hook.hpp  HookRegistry.hpp
kodiak/src/Game/Hook/Impl/: CameraHook.cpp  CameraHook.hpp  HitResultActorHook.cpp  HitResultActorHook.hpp  LocalPlayerHook.cpp  LocalPlayerHook.hpp  MouseProcHook.cpp  MouseProcHook.hpp
kodiak/src/SDK/: SDK.hpp
kodiak/src/SDK/Actor/: Actor.cpp  Actor.hpp  ActorType.hpp  Camera.h
kodiak/src/SDK/Actor/Components/: AABBShapeComponent.hpp  ActorRotationComponent.hpp  StateVectorComponent.hpp
kodiak/src/Util/: Angle.hpp  Asm.hpp  Command.hpp  Console.hpp  Detour.hpp  Mem.hpp  NT.hpp  Pattern.hpp  Vector.h
